--- a/package.json
+++ b/package.json
@@ -1,18 +1,29 @@
 {
   "name": "phaser_mmorpg",
   "version": "1.0.0",
-  "main": "server.ts",
-  "repository": "git@github.com:jhessin/phaser_mmorpg2.git",
   "author": "Jim Hessin <jhessin@gmail.com>",
   "license": "MIT",
+  "main": "server/index.ts",
+  "repository": "git@github.com:jhessin/phaser_mmorpg2.git",
   "scripts": {
+    "build": "tsc",
+    "dev": "nodemon",
     "lint": "eslint --fix .",
     "start": "ts-node server/index.ts"
   },
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/clean-webpack-plugin": "^0.1.3",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.11",
     "@types/html-webpack-plugin": "^3.2.4",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/nodemailer": "^6.4.0",
+    "@types/passport": "^1.0.5",
+    "@types/passport-jwt": "^3.0.3",
+    "@types/passport-local": "^1.0.33",
+    "@types/socket.io": "^2.1.12",
+    "@types/uuid": "^8.3.0",
     "@types/webpack": "^4.41.26",
     "@types/webpack-dev-middleware": "^4.1.0",
     "@types/webpack-dev-server": "^3.11.1",
@@ -20,6 +31,13 @@
     "@types/webpack-node-externals": "^2.5.0",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "cookie-parser": "^1.4.5",
+    "copy-webpack-plugin": "^6.3.2",
+    "css-loader": "^5.0.1",
+    "dotenv": "^8.2.0",
     "eslint": "^7.18.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -29,11 +47,24 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
     "express": "^4.17.1",
+    "file-loader": "^6.2.0",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^4.5.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.9",
+    "nodemailer": "^6.4.17",
+    "nodemailer-express-handlebars": "^4.0.0",
+    "nodemon": "^2.0.6",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "phaser": "^3.50.1",
+    "socket.io": "^3.0.5",
+    "style-loader": "^2.0.0",
     "ts-loader": "^8.0.14",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
+    "uuid": "^8.3.2",
     "webpack": "^5.17.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-middleware": "^4.1.0",
