--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,10 @@
     "target": "es5",
     "sourceMap": true,
     "resolveJsonModule": true,
-    "types": [
-      "node"
-    ],
-    "typeRoots": [
-      "./types"
-    ],
+    "moduleResolution": "node",
+    "paths": {
+      "*": [ "./types/*"]
+    },
     "allowJs": true
   },
   "include": [
