--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/socket.io": "^2.1.12",
+    "@types/socket.io-client": "^1.4.35",
     "@types/uuid": "^8.3.0",
     "@types/webpack": "^4.41.26",
     "@types/webpack-dev-middleware": "^4.1.0",
@@ -63,6 +64,7 @@
     "passport-local": "^1.0.0",
     "phaser": "^3.50.1",
     "socket.io": "^3.0.5",
+    "socket.io-client": "^3.1.0",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.14",
     "ts-node": "^9.1.1",
