--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/clean-webpack-plugin": "^0.1.3",
     "@types/cookie-parser": "^1.4.2",
+    "@types/copy-webpack-plugin": "^6.4.0",
     "@types/express": "^4.17.11",
     "@types/html-webpack-plugin": "^3.2.4",
     "@types/jsonwebtoken": "^8.5.0",
@@ -26,6 +27,7 @@
     "@types/passport-local": "^1.0.33",
     "@types/socket.io": "^2.1.12",
     "@types/socket.io-client": "^1.4.35",
+    "@types/terser-webpack-plugin": "^5.0.2",
     "@types/uuid": "^8.3.0",
     "@types/webpack": "^4.41.26",
     "@types/webpack-dev-middleware": "^4.1.0",
@@ -66,6 +68,7 @@
     "socket.io": "^3.0.5",
     "socket.io-client": "^3.1.0",
     "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.1.1",
     "ts-loader": "^8.0.14",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
